--- a/src/main/resources/vanilla.properties
+++ b/src/main/resources/vanilla.properties
@@ -86,12 +86,17 @@ script.filters = filter.LoginFilter, filter.ResultFormatterFilter
 response.stackTrace = true
 
 #-----------------------------------------
+# File Upload / Download Config
+#-----------------------------------------
+# 파일 업로드 경로. 아래 설정된 경로에서 yyyy/mm/dd 형태의 날자별 디렉토리에 파일이 저장된다
+file.upload.directory = D:/temp/fileupload
+# 파일명숨김 : true일경우 201901031631.jpg 형태로 저장된다. 기본값은 false
+file.hide.upload.filename = false
+
+#-----------------------------------------
 # custom Config
 #-----------------------------------------
-file.upload.path = D:/temp/fileupload
-
 #토큰유효기간 (분)
 token.timeout = 3000
-
 
 
