--- a/src/test/resources/vanilla.properties
+++ b/src/test/resources/vanilla.properties
@@ -100,7 +100,7 @@ response.stackTrace = true
 # File Upload / Download Config
 #-----------------------------------------
 # 파일 업로드 경로. 아래 설정된 경로에서 yyyy/mm/dd 형태의 날자별 디렉토리에 파일이 저장된다
-file.upload.directory = D:/temp/fileupload
+file.upload.directory = ./fileupload
 # 파일명숨김 : true일경우 201901031631.jpg 형태로 저장된다. 기본값은 false
 file.hide.upload.filename = false
 
